[package]
name = "psp34_example"
version = "0.2.1"
authors = [
  "Edinyanga Ottoho <elzucky@gmail.com>",
  "netfox <say-hi@netfox.rip>",
  "Just Apes <>"
]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

psp34 = { git = "https://github.com/just-ape-studios/just-ape-studios-contracts.git", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
contract = []
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp34/std"
]
ink-as-dependency = []
